appId: host.exp.exponent
---
- runFlow: seed-data.yaml
- tapOn:
    point: "50%,95%"
- waitForAnimationToEnd
- assertVisible: "Log a Session"
- swipe:
    direction: DOWN
    from: "50%,20%"
    to: "50%,80%"
- waitForAnimationToEnd
