appId: com.skylightsocial.tatum
---
- launchApp
- tapOn: "CALENDAR"
- tapOn:
    text: "TAP TO DISMISS"
    optional: true

# Use FAB to open Quick Log
- tapOn: "✦"
- waitForAnimationToEnd
- tapOn: "😘"
- tapOn: "LOG IT"
- waitForAnimationToEnd

# Check stats
- tapOn: "STATS"
- assertVisible: "Your Stats"
